[gd_scene load_steps=26 format=2]

[ext_resource path="res://Elementos/Fases/Hospital/HospitalFase3/LivroAzul.png" type="Texture" id=1]
[ext_resource path="res://Cenas/Objetos/CaixaDialogo.tscn" type="PackedScene" id=2]
[ext_resource path="res://Elementos/Fases/Hospital/HospitalFase3/LivroVermelho.png" type="Texture" id=3]
[ext_resource path="res://Cenas/Fontes/FonteComicSansMS.tscn" type="PackedScene" id=4]
[ext_resource path="res://Elementos/Textuais/ComicSansMS/comic.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Elementos/Visuais/Fundo/Hosp.jpg" type="Texture" id=6]
[ext_resource path="res://Cenas/Objetos/Painel.tscn" type="PackedScene" id=7]
[ext_resource path="res://Codigos/Cenas/TelaPrincipalHospitalNivel3Tutorial.gd" type="Script" id=8]
[ext_resource path="res://Elementos/Sonoros/Notificar/Erro-2.wav" type="AudioStream" id=9]
[ext_resource path="res://Elementos/Visuais/Icones/Desinverter.png" type="Texture" id=10]
[ext_resource path="res://Elementos/Sonoros/Clicar/Peca.wav" type="AudioStream" id=11]
[ext_resource path="res://Elementos/Sonoros/Notificar/Acerto-1.wav" type="AudioStream" id=12]
[ext_resource path="res://Elementos/Fases/Hospital/HospitalFase3/Ruim_04.png" type="Texture" id=13]
[ext_resource path="res://Elementos/Visuais/Mao/MaoAuxilicar.png" type="Texture" id=14]
[ext_resource path="res://Elementos/Textuais/Arial/arial.ttf" type="DynamicFontData" id=15]
[ext_resource path="res://Cenas/Fontes/FonteArial.tscn" type="PackedScene" id=16]

[sub_resource type="DynamicFont" id=1]
resource_local_to_scene = true
size = 34
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
resource_local_to_scene = true
size = 38
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=3]
resource_local_to_scene = true
size = 34
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=4]
resource_local_to_scene = true
size = 70
outline_size = 25
font_data = ExtResource( 15 )

[sub_resource type="DynamicFont" id=5]
resource_local_to_scene = true
size = 38
font_data = ExtResource( 5 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 149.05, 174.173 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 148.593, 167.299 )

[sub_resource type="Animation" id=8]
length = 0.3
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 22, 0 ), Vector2( -19, 0 ), Vector2( 17, 0 ), Vector2( -23, 0 ), Vector2( 21, 0 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=9]
length = 4.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("ZonaNascimento/Mao:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ZonaNascimento/Mao:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.6, 3, 4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ZonaNascimento/Mao:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.2, 3, 4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -128, 180 ), Vector2( -128, 180 ), Vector2( 200, 180 ), Vector2( 200, 180 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("ZonaNascimento/Mao:rect_rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.6, 1, 3.1, 3.4, 4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 30.0, 30.0, 0.0, 0.0, 30.0, 30.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("ZonaNascimento/ToqueTransparente:rect_position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1.2, 3, 4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -200, 80 ), Vector2( -200, 80 ), Vector2( 100, 80 ), Vector2( 100, 80 ) ]
}

[node name="TelaHospitalFase3Tutorial" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fundo" type="TextureRect" parent="."]
self_modulate = Color( 0.447059, 0.737255, 0.784314, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 143.0
texture = ExtResource( 6 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Dialogo" parent="." instance=ExtResource( 2 )]

[node name="Texto" parent="Dialogo/Margem/Vertical/BotaoVoz/Vertical" index="1"]
custom_fonts/font = SubResource( 1 )

[node name="Caixa" parent="Dialogo/Margem/Vertical" index="1"]
margin_right = 1260.0

[node name="Texto" parent="Dialogo/Margem/Vertical/Caixa/Margem" index="0"]
margin_right = 1134.0
custom_fonts/normal_font = SubResource( 2 )
CarregarTexto = "TelaHospitalFase3_Tutorial"
CarregarVoz = "TelaHospitalFase3_Tutorial"

[node name="BotaoComando" parent="Dialogo/Margem/Vertical" index="2"]
visible = false
toggle_mode = true

[node name="Icone" parent="Dialogo/Margem/Vertical/BotaoComando/Vertical" index="0"]
self_modulate = Color( 1, 1, 1, 1 )
margin_top = 34.0
margin_right = 163.0
margin_bottom = 104.0
texture = ExtResource( 10 )
flip_h = false

[node name="Texto" parent="Dialogo/Margem/Vertical/BotaoComando/Vertical" index="1"]
margin_top = 109.0
margin_right = 163.0
margin_bottom = 157.0
custom_fonts/font = SubResource( 3 )
text = "BotaoTras"

[node name="Texto" parent="." instance=ExtResource( 16 )]
anchor_right = 1.0
margin_right = 0.0
margin_bottom = 79.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.2, 0.372549, 0.737255, 1 )
text = "Tutorial"
align = 1

[node name="DisposicaoLateral" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.425
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -845.0
margin_top = -205.0
margin_right = 845.0
margin_bottom = 205.0
size_flags_horizontal = 4
size_flags_vertical = 0
custom_constants/separation = 450
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ToquesBons" type="TextureButton" parent="DisposicaoLateral"]
margin_left = 220.0
margin_right = 620.0
margin_bottom = 400.0
rect_min_size = Vector2( 400, 400 )
size_flags_horizontal = 0
size_flags_vertical = 0
texture_normal = ExtResource( 1 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Texto" parent="DisposicaoLateral/ToquesBons" instance=ExtResource( 4 )]
anchor_left = 0.3
anchor_top = 0.5
anchor_right = 0.3
anchor_bottom = 0.5
margin_left = -50.0
margin_top = -11.5
margin_right = 43.0
margin_bottom = 11.5
custom_fonts/font = SubResource( 5 )
text = "ToquesBons"
align = 1
valign = 1

[node name="Area" type="Area2D" parent="DisposicaoLateral/ToquesBons"]
position = Vector2( 180, 200 )

[node name="Contorno" type="CollisionShape2D" parent="DisposicaoLateral/ToquesBons/Area"]
shape = SubResource( 6 )

[node name="ToquesRuins" type="TextureButton" parent="DisposicaoLateral"]
margin_left = 1070.0
margin_right = 1470.0
margin_bottom = 400.0
rect_min_size = Vector2( 400, 400 )
size_flags_horizontal = 0
size_flags_vertical = 0
texture_normal = ExtResource( 3 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Texto" parent="DisposicaoLateral/ToquesRuins" instance=ExtResource( 4 )]
anchor_left = 0.3
anchor_top = 0.5
anchor_right = 0.3
anchor_bottom = 0.5
margin_left = -50.0
margin_top = -27.0
margin_right = 110.0
margin_bottom = 27.0
custom_fonts/font = SubResource( 5 )
text = "ToquesRuins"
align = 1
valign = 1

[node name="Area" type="Area2D" parent="DisposicaoLateral/ToquesRuins"]
position = Vector2( 180, 200 )

[node name="Contorno" type="CollisionShape2D" parent="DisposicaoLateral/ToquesRuins/Area"]
shape = SubResource( 6 )

[node name="ZonaNascimento" type="Control" parent="."]
anchor_left = 0.5
anchor_right = 0.5
mouse_filter = 1
size_flags_horizontal = 4
size_flags_vertical = 4
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="ToqueTransparente" type="TextureRect" parent="ZonaNascimento"]
modulate = Color( 1, 1, 1, 0.392157 )
margin_left = -200.0
margin_top = 80.0
margin_right = 200.0
margin_bottom = 480.0
rect_pivot_offset = Vector2( 200, 200 )
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource( 13 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Contorno" type="ReferenceRect" parent="ZonaNascimento/ToqueTransparente"]
anchor_right = 1.0
anchor_bottom = 1.0
border_color = Color( 0, 0.0784314, 0.392157, 1 )
border_width = 10.0
editor_only = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Som" type="AudioStreamPlayer" parent="ZonaNascimento/ToqueTransparente"]
stream = ExtResource( 11 )

[node name="Area" type="Area2D" parent="ZonaNascimento/ToqueTransparente"]
monitoring = false
monitorable = false

[node name="Contato" type="CollisionShape2D" parent="ZonaNascimento/ToqueTransparente/Area"]
position = Vector2( 200, 200 )
shape = SubResource( 7 )

[node name="Mao" type="TextureRect" parent="ZonaNascimento"]
self_modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 200.0
margin_top = 180.0
margin_right = 456.0
margin_bottom = 436.006
rect_rotation = 30.0
rect_pivot_offset = Vector2( 128, 240 )
texture = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Toque" type="TextureRect" parent="ZonaNascimento"]
show_behind_parent = true
margin_left = -200.0
margin_top = 80.0
margin_right = 200.0
margin_bottom = 480.0
rect_pivot_offset = Vector2( 200, 200 )
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource( 13 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Contorno" type="ReferenceRect" parent="ZonaNascimento/Toque"]
anchor_right = 1.0
anchor_bottom = 1.0
border_color = Color( 0, 0.0784314, 0.392157, 1 )
border_width = 10.0
editor_only = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Som" type="AudioStreamPlayer" parent="ZonaNascimento/Toque"]
stream = ExtResource( 11 )

[node name="Area" type="Area2D" parent="ZonaNascimento/Toque"]

[node name="Contato" type="CollisionShape2D" parent="ZonaNascimento/Toque/Area"]
position = Vector2( 200, 200 )
shape = SubResource( 7 )

[node name="Camera" type="Camera2D" parent="."]
anchor_mode = 0
current = true

[node name="Animar" type="AnimationPlayer" parent="Camera"]
anims/TemerCamera = SubResource( 8 )

[node name="Painel" parent="." instance=ExtResource( 7 )]

[node name="AudioAcerto" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )

[node name="AudioErro" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )

[node name="AnimarTutorial" type="AnimationPlayer" parent="."]
autoplay = "TutorialRuim"
anims/TutorialRuim = SubResource( 9 )

[connection signal="toggled" from="Dialogo/Margem/Vertical/BotaoComando" to="." method="_viraDesvira"]
[connection signal="gui_input" from="ZonaNascimento/ToqueTransparente/Contorno" to="." method="_arrastarImagem"]
[connection signal="area_entered" from="ZonaNascimento/ToqueTransparente/Area" to="." method="_AreaEntrou"]
[connection signal="area_exited" from="ZonaNascimento/ToqueTransparente/Area" to="." method="_AreaSaiu"]
[connection signal="gui_input" from="ZonaNascimento/Toque/Contorno" to="." method="_arrastarImagem"]
[connection signal="area_entered" from="ZonaNascimento/Toque/Area" to="." method="_AreaEntrou"]
[connection signal="area_exited" from="ZonaNascimento/Toque/Area" to="." method="_AreaSaiu"]

[editable path="Dialogo"]
[editable path="Dialogo/Margem/Vertical/BotaoVoz"]
[editable path="Dialogo/Margem/Vertical/BotaoComando"]
